# RTES_Table_Tennis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IMUCallback.h  IMUProcessor.h  IMUPublisher.cpp  IMUPublisher.h  IMUSample.h  Makefile  README.md  ads1115rpi.cpp  cmake_install.cmake  event_detector.h  main.cpp  pi3sender  positiondetector.h  postiondetector.cpp
Despina/: accel_pwm.cpp
Example/: CMakeCache.txt  CMakeLists.txt  icm20948_i2c.cpp  icm20948_i2c.hpp  main.cpp
IMU_processing/: cmake_install.cmake  icm20948_i2c.cpp
IMU_processing/imudriver/: icm20948_i2c.cpp  icm20948_i2c.hpp
Nat_Positiondetector/: positiondetector.cpp  positiondetector.h  postiondetector.cpp
PI5_fromNat/: Makefile  led_controller.cpp  positiondetector.hpp
PWM_Code/TestPushCode/: accel_pwm  cmake_install.cmake
Piezo /: CMakeLists.txt  ReadMe.md  ReadMe.txt  ads1115rpi.cpp  ads1115rpi.h  event_detector.cpp  led_controller.cpp  led_controller.h  main.cpp
Position&Swingdetection/IMU_processing/example/: test_yaml.cpp
Position&Swingdetection/Starting_position/: positiondetector.cpp  positiondetector.h
Position&Swingdetection/Swingdetection/: swing.h
junk/: Makefile  main.cpp  swing_detection  test.txt
junk/1/1/: CTestTestfile.cmake  Icm20948driver.cpp  Makefile  PiezoEventDetector_GTest  SwingCalibrator.hpp  SwingDetector.cpp  SwingDetector_GTest  SwingFeedback_GTest  SwingProcessor_GTest  apply_adc_filter.sh  event_detector.cpp  i2c_mutex.hpp  imureader.cpp  ledcallback.cpp  ledcallback.hpp  main.cpp  main.cpp.bak.20260415_224645  rpi_pwm.h  rtes_main
junk/1/1/Testing/Temporary/: CTestCostData.txt
junk/1/1/tests/: PiezoEventDetector_GTest.cpp  SwingCalibrator_GTest.cpp  SwingDetector_GTest.cpp  SwingFeedback_GTest.cpp  compile_flags.txt
junk/Despina/Example/: pi3_sender
junk/Despina/Ignore/IMU_processing/: Makefile  accel_pwm.cpp  pi3_sender.cpp  pi3sender
junk/Despina/Ignore/IMU_processing/IMUPublisher/: IMUPublisher.cpp
junk/IMU_processing/IMUPublisher/: IMUPublisher.cpp
junk/IMU_swing_Nano/: CMakeLists.txt  Makefile  compile_commands.json  imu_swing  imureader.cpp  imureader.hpp  main.cpp  swing1.txt  swing2.txt  swing3.txt  swing4_noCalibration.txt
junk/IMU_swing_Nano/IMUMaths_Swing/: IMU_Integrator.cpp  IMU_Integrator.hpp
junk/IMU_swing_Nano/IMU_swingLogic/: SwingDetector.cpp  SwingDetector.hpp  SwingProcessor.cpp  SwingProcessor.hpp
junk/March23/: CMakeLists.txt  Icm20948driver.cpp  Makefile  imureader.cpp  ledcallback.hpp  main.cpp  positiondetector.hpp  rtes_main
junk/March23/Files with explanations/: LEDCPP.txt  LEDHPP.txt  PDcpp.txt  PDhpp.txt  maincpp.txt
junk/Motor/GPIOTest/: main.cpp
junk/Motor_stuff/Motor/: CMakeCache.txt
junk/Motor_stuff/Motor/GPIOTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gpio_blink
junk/Motor_stuff/Motor/IMU_processing/IMUPublisher/: IMUPublisher.cpp
junk/Motor_stuff/Motor/IMU_processing/example/: Makefile
junk/Motor_stuff/Motor/IMU_processing/imu_settings/: icm20948_defs.hpp
junk/Motor_stuff/Motor/thresholds_test/: CMakeLists.txt  accel_pwm.cpp  imureader.hpp  main.cpp  positiondetector.cpp  rpi_pwm.h  swingfeedback.cpp  swingfeedback.h
junk/Old_main/: rtes_main
junk/Old_main/IMU_processing_2/IMUPublisher/: IMUPublisher.hpp
junk/Old_main/PI5_fromNat/: CMakeLists.txt  ads1115rpi.cpp  ledcallback.cpp  ledcallback.hpp  main.cpp  positiondetector.cpp  samplereceiver.cpp  samplereceiver.hpp
junk/Old_main/Pi3/: pi3_imu_log.csv
junk/Old_main/Pi3_2/: pi3_sender.cpp
junk/Old_main/Piezo /: ads1115rpi.cpp  event_detector.cpp  event_detector.h  led_controller.h
junk/Old_main/Position&Swingdetection/IMU_processing/: CMakeLists.txt  README.md  imu_coords
junk/Old_main/Position&Swingdetection/IMU_processing/example/: test.yaml
junk/Old_main/Starting_position/: positiondetector.cpp  positiondetector.h
junk/Other -main- stuff/: LEDCallback.cpp  Makefile  rtes_main  test.txt
junk/PI5_thatNanoCopied/: CMakeCache.txt  Icm20948driver.hpp  Makefile  ads1115rpi.cpp  ads1115rpi.h  cmake_install.cmake  event_detector.cpp  event_detector.h  led_controller.cpp  led_controller.h  ledcallback.cpp  main.cpp  positiondetector.hpp  rtes_main
junk/PWM_Code/TestPushCode/: CMakeCache.txt  CMakeLists.txt  Makefile  accel_pwm.cpp
junk/Piezo /: CMakeLists.txt  event_detector.cpp  main.cpp
junk/Piezo copy/: CMakeLists.txt  Makefile  abc.tsv  ads1115_demo  ads1115rpi.cpp  ads1115rpi.h  data.tsv  event_detector.cpp  event_detector.h  led_controller.cpp  led_controller.h  libads1115rpi.so.1  main.cpp  test1.tsv
junk/Position&Swingdetection/IMU_processing/: LICENSE  Makefile  main.cpp
junk/Position&Swingdetection/IMU_processing/example/: test.cpp
legacy_code/: CMakeLists.txt  IMUCallback.h  IMUPublisher.cpp  IMUPublisher.h  IMUSample.h
src/: CMakeLists.txt  Makefile  main.cpp  rtes_main
src/1/: CMakeLists.txt  Icm20948driver.hpp  PositionDetector_GTest  SwingCalibrator_GTest  SwingProcessor.cpp  ads1115rpi.cpp  ads1115rpi.h  led_controller.cpp  led_controller.h  rtes_main  swingfeedback.cpp
src/libs/IMU/: CMakeLists.txt  Icm20948driver.cpp  README.md  imureader.cpp
src/libs/IMU/Include/: Icm20948driver.hpp  i2c_mutex.hpp  imureader.hpp
src/libs/IMU_math/: SwingCalibrator.cpp  SwingDetector.cpp  SwingProcessor.cpp  positiondetector.cpp
src/libs/IMU_math/Include/: SwingCalibrator.hpp  SwingDetector.hpp  SwingProcessor.hpp  positiondetector.hpp
src/libs/LEDs/: led_controller.cpp  ledcallback.cpp
src/libs/LEDs/Include/: led_controller.h  ledcallback.hpp
src/libs/Motor/: CMakeLists.txt  README.md  swingfeedback.cpp
src/libs/Motor/Include/: rpi_pwm.h  swingfeedback.h
src/libs/Piezo/: CMakeLists.txt  ReadMe.md  ads1115rpi.cpp  event_detector.cpp  event_detector.h  led_controller.cpp
src/libs/Piezo/Include/: ads1115rpi.h  event_detector.h
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PositionDetector_GTest.cpp  SwingDetector_GTest.cpp  SwingFeedback_GTest.cpp  SwingProcessor_GTest.cpp
